--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bad-words": "^4.0.0",
+    "highlight.js": "^11.11.1",
     "node-fetch": "^2.7.0",
+    "packages": "^0.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
